# graphql-server-sqlx

./: .env  Cargo.toml  README.md  diesel.toml
src/: main.rs
src/data_base/: connection.rs  mod.rs  models.rs  schema.rs
src/db_requests/: customers.rs  mod.rs  store.rs
src/gql_schema/: graphql.rs  graphql_fields.rs  mod.rs
src/server/: mod.rs  routes.rs
